--- a/view/about/about.html
+++ b/view/about/about.html
@@ -2,74 +2,82 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="about.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="about.css">
-    <title>zuxmoney</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="about.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="about.css">
+  <title>zuxmoney</title>
 </head>
 
 <body>
-    <div class="backimage">
-        <div class="topnav">
-            <ul>
-                <li class="logo"style="float: left; margin-top: 2%;" ><img src="../../src/images/logo5.png" alt="Logo" width="270px" ></li>
-                <li><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
-                <li><a href="../servicepage/service.html">SERVICES</a></li>
-                <li><a href="../contacts/contacts.html">CONTACTS</a></li>
-                <li><a href="../about/about.html">ABOUT</a></li>
-                <li><a href="../homepage/home.html">HOME</a></li>
-            </ul>
-        </div>
+  <div class="backimage">
+    <div class="topnav">
+      <div class="logo">
+        <img src="../../src/images/logo5.png" alt="Logo" width="270px">
     </div>
-    <div class="about">
-      <div class="head">
-        <p>
-          <span>About</span> ZuxMoney
+      <ul class="subtop">
+        <li><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
+        <li><a href="../servicepage/service.html">SERVICES</a></li>
+        <li><a href="../contacts/contacts.html">CONTACTS</a></li>
+        <li><a href="../about/about.html">ABOUT</a></li>
+        <li><a href="../homepage/home.html">HOME</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="about">
+    <div class="head">
+      <p>
+        <span>About</span> ZuxMoney
       </p>
-      </div>
-      <div class="para">
-        <p>
-          zuxcash is an Aveda Concept Salon located in Uptown Charlotte. All of our valued customers receive free parking. Our mission is to provide the highest quality service, in union with the highest quality products for the well being of our guests and the environment.
-          zuxcash is an Aveda Concept Salon located in Uptown Charlotte. All of our valued customers receive free parking. Our mission is to provide the highest quality service, in union with the highest quality products for the well being of our guests and the environment.
-          zuxcash is an Aveda Concept Salon located in Uptown Charlotte. All of our valued customers receive free parking. Our mission is to provide the highest quality service, in union with the highest quality products for the well being of our guests and the environment.
-          zuxcash is an Aveda Concept Salon located in Uptown Charlotte. All of our valued customers receive free parking. Our mission is to provide the highest quality service, in union with the highest quality products for the well being of our guests and the environment.
-          
-        </p>
-      </div>
     </div>
-   
-    <div class="footer">
+    <div class="para">
+      <p>
+        zuxcash is an Aveda Concept Salon located in Uptown Charlotte. All of our valued customers receive free parking.
+        Our mission is to provide the highest quality service, in union with the highest quality products for the well
+        being of our guests and the environment.
+        zuxcash is an Aveda Concept Salon located in Uptown Charlotte. All of our valued customers receive free parking.
+        Our mission is to provide the highest quality service, in union with the highest quality products for the well
+        being of our guests and the environment.
+        zuxcash is an Aveda Concept Salon located in Uptown Charlotte. All of our valued customers receive free parking.
+        
+      </p>
+    </div>
+  </div>
 
+  <div class="footer">
+    <div class="socialicons">
         <a href="#" class="fa fa-instagram"></a>
         <a href="#" class="fa fa-facebook"></a>
-        
         <a href="#" class="fa fa-telegram"></a>
         <a href="#" class="fa fa-twitter"></a>
         <a href="#" class="fa fa-whatsapp"></a>
-          
-          <div class="rowf">
-            <div class="columnf">
-              <h2>Hours</h2>
-              <p >Monday-Friday:&nbsp; &nbsp;&nbsp;&nbsp;  8:00am-10:00pm<br>
-              Saturday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 9:00am-7:00pm<br>
-             Sunday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 12:00am-7:00pm</p>
-            </div>
-            
-            <div class="columnf">
-              <h2>Location</h2>
-              <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
-            </div>
-            
-            <div class="columnf">
-              <h2>Contacts</h2>
-              <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp;  +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com<p>
-            </div>
-          </div>
+    </div>
+
+
+
+    <div class="row">
+        <div class="column1">
+            <h3>Hours</h3>
+            <p>Mon-Fri:&nbsp; &nbsp;&nbsp;&nbsp; 8:00am-10:00pm<br>
+                Sat:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;  9:00am-7:00pm<br>
+                Sun:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;  12:00am-7:00pm</p>
         </div>
-        
+
+        <div class="column2">
+            <h3>Location</h3>
+            <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
+        </div>
+
+        <div class="column3">
+            <h3>Contacts</h3>
+            <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
+            <p>
+        </div>
+    </div>
+</div>
+
 </body>
 
 </html>
