--- a/view/homepage/home.html
+++ b/view/homepage/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="homescript.js"></script>
+    <script defer src="homescript.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="homestyle.css">
     <title>zuxmoney</title>
@@ -28,104 +28,125 @@
 
         </div>
     </div>
+    <div class="hidden">
+        <div class="services">
+            <div class="head">
+                <p>
+                    <span>Our</span> Services
+                </p>
+            </div>
 
-    <div class="services">
-        <div class="head">
-            <p>
-                <span>Our</span> Services
-            </p>
+            <div class="servicesgallery">
+
+                <div class="servigallery1 ">
+                    <a target="_blank" href="../../src/images/pic4.jpg">
+                        <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
+                    </a>
+                    <p>HAIR <span>DRESSING</span></p>
+                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                        description of the image here</div>
+                </div>
+
+
+
+
+                <div class="servigallery2 ">
+                    <a target="_blank" href="../../src/images/pic2.jpg">
+                        <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
+                    </a>
+                    <p>MAKE<span>UP</span></p>
+                    <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
+                        description of the image here</div>
+                </div>
+
+
+
+                <div class="servigallery3 ">
+                    <a target="_blank" href="../../src/images/pic3.jpg">
+                        <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
+                    </a>
+                    <p><span>DISCOUNT</span> ON SERVICES</p>
+                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                        description of the image here</div>
+                </div>
+
+
+            </div>
+
         </div>
-
-        <div class="servicesgallery">
-            <div class="servigallery1">
-                <a target="_blank" href="../../src/images/pic4.jpg">
-                    <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
-                </a>
-                <p>HAIR <span>DRESSING</span></p>
-                <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                    description of the image here</div>
-            </div>
-
-            <div class="servigallery2">
-                <a target="_blank" href="../../src/images/pic2.jpg">
-                    <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
-                </a>
-                <p>MAKE<span>UP</span></p>
-                <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
-                    description of the image here</div>
-            </div>
-
-            <div class="servigallery3">
-                <a target="_blank" href="../../src/images/pic3.jpg">
-                    <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
-                </a>
-                <p><span>DISCOUNT</span> ON SERVICES</p>
-                <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                    description of the image here</div>
-            </div>
-        </div>
-
     </div>
-    <div class="offers">
-        <div class="head">
-            <p>
-                <span>Special</span> offers
-            </p>
-        </div>
-        <div class="offersgallery">
-            <div class="offgallery1">
-                <a target="_blank" href="../../src/images/pic4.jpg">
-                    <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
-                </a>
-                <p>FREE <span>Wi-Fi</span></p>
-                <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                    description of the image here</div>
-            </div>
-            <div class="offgallery2">
-                <a target="_blank" href="../../src/images/pic2.jpg">
-                    <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
-                </a>
-                <p>JUICE AND <span>BITES</span></p>
-                <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
-                    description of the image here</div>
-            </div>
-            <div class="offgallery3">
-                <a target="_blank" href="../../src/images/pic3.jpg">
-                    <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
-                </a>
-                <p><span>DISCOUNT</span> ON SERVICES</p>
-                <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
-                    description of the image here</div>
-            </div>
-        </div>
 
+    <!-- <div class="services">
+        <h1>hbfsudfbsdbvsdbvubdsbvdbsvjbdsjvb
+
+            dvdsvdsvdsv
+        </h1>
+    </div> -->
+    <div class="hidden">
+        <div class="offers">
+            <div class="head">
+                <p>
+                    <span>Special</span> offers
+                </p>
+            </div>
+            <div class="offersgallery">
+                <div class="offgallery1">
+                    <a target="_blank" href="../../src/images/pic4.jpg">
+                        <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
+                    </a>
+                    <p>FREE <span>Wi-Fi</span></p>
+                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                        description of the image here</div>
+                </div>
+                <div class="offgallery2">
+                    <a target="_blank" href="../../src/images/pic2.jpg">
+                        <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
+                    </a>
+                    <p>JUICE AND <span>BITES</span></p>
+                    <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
+                        description of the image here</div>
+                </div>
+                <div class="offgallery3">
+                    <a target="_blank" href="../../src/images/pic3.jpg">
+                        <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
+                    </a>
+                    <p><span>DISCOUNT</span> ON SERVICES</p>
+                    <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
+                        description of the image here</div>
+                </div>
+            </div>
+
+        </div>
     </div>
+
     <div class="footer">
+        <div class="socialicons">
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-telegram"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-whatsapp"></a>
+        </div>
 
-        <a href="#" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-facebook"></a>
 
-        <a href="#" class="fa fa-telegram"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-whatsapp"></a>
 
         <div class="row">
-            <div class="column">
+            <div class="column1">
                 <h3>Hours</h3>
-                <p>Monday-Friday:&nbsp; &nbsp;&nbsp;&nbsp; 8:00am-10:00pm<br>
-                    Saturday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 9:00am-7:00pm<br>
-                    Sunday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 12:00am-7:00pm</p>
+                <p>Mon-Fri:&nbsp; &nbsp;&nbsp;&nbsp; 8:00am-10:00pm<br>
+                    Sat:&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 9:00am-7:00pm<br>
+                    Sun:&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 12:00am-7:00pm</p>
             </div>
 
-            <div class="column">
+            <div class="column2">
                 <h3>Location</h3>
                 <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
             </div>
 
-            <div class="column">
+            <div class="column3">
                 <h3>Contacts</h3>
                 <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
-                <p>
+                </p>
             </div>
         </div>
     </div>
