--- a/view/about/about.css
+++ b/view/about/about.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  /* background-color: rgb(0, 0, 0); */
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
+    font-family: 'Poppins', sans-serif ;
+  background-color: rgb(0, 0, 0);
 }
-
+* {
+  box-sizing: border-box;
+}
 :root {
   --golden: rgb(230, 212, 14);
 }
@@ -15,24 +19,21 @@ body {
   /* padding-left: 2%; */
   width: 100%;
 }
-.topnav ul {
+.subtop {
+  /* background-color: purple; */
+  float: left;
+  width: 60%;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  /* background-color: #333; */
-  /* border-radius: 2px; */
-  width: 100;
+  margin-top: 2%;
 }
-
-.topnav li {
+.subtop li {
   float: right;
   /* display: inline; */
   margin-top: 3%;
   margin-right: 2%;
 }
 
-.topnav li a {
+.subtop li a {
   display: block;
   color: white;
   text-align: center;
@@ -40,10 +41,22 @@ body {
   text-decoration: none;
   font-size: 150%;
   float: left;
+  position: relative;
+}
+.subtop li a:after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  transition: width 0.3s ease-in-out;
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  background-color: var(--golden);
 }
 
-.topnav li a:hover {
-  background-color: var(--golden);
+.subtop a:hover:after {
+  width: 100%;
 }
 
 .logo {
@@ -55,6 +68,7 @@ body {
   text-decoration: none;
   margin-right: 200px;
   font-size: 150%;
+  margin-top: 2%;
 }
 
 .backimage {
@@ -65,7 +79,7 @@ body {
   top: 0;
   /* animation: change 30s infinite ease-in-out; */
 }
-@keyframes change {
+/* @keyframes change {
   0% {
     background-image: url(../../src/images/pic2.jpg);
   }
@@ -84,11 +98,21 @@ body {
   100% {
     background-image: url(../../src/images/pic3.jpg);
   }
-}
+} */
 
+.about{
+  display: grid;
+  place-items: center;
+  align-content: center;
+
+}
+ .head{
+  
+ }
 .about .head p {
   font-size: 40px;
   text-align: center;
+  color: white;
 }
 
 .about .head p span {
@@ -96,59 +120,85 @@ body {
 }
 
 .para {
-  height: 400px;
-  width: 80%;
-  margin-left: 10%;
+  /* height: 400px; */
+  width: 95%;
+  /* margin-left: 10%; */
+  /* background-color: yellow; */
 }
 
 .para p {
   font-size: 150%;
+  color: white;
 }
+
 
 /* footer starts here */
 
 .footer {
   background-color: #252323;
   padding: 15px;
-  text-align: center;
+  /* text-align: center; */
   height: 300%;
-  color: aliceblue;
-  margin-top: 3%;
+  color: white;
+  margin-top: 2%;
+  /* padding-left: 15%; */
+  display: grid;
+  place-items: center;
 }
 
-.rowf .columnf h2 {
+.row  h3 {
   color: var(--golden);
+  text-align: center;
 }
-.rowf .columnf p {
+.row  p {
   font-size: 120%;
 }
-/* Create three equal columns that floats next to each other */
-.columnf {
-  float: left;
-  width: 29%;
-  padding: 15px;
-  margin-right: 2%;
+.row{
+  /* background-color: purple; */
+  width: 98%;
 }
 
+/* Create three equal columns that floats next to each other */
+ .column1 {
+  float: left;
+  width: 32%;
+  /* background-color: red; */
+  /* padding: 15px; */
+  /* margin-right: 2%; */
+  display: grid;
+  place-items: center;
+  
+}
+.column2 {
+  float: left;
+  width: 32%;
+  /* background-color: yellow; */
+  /* padding: 15px; */
+  /* margin-right: 2%; */
+  display: grid;
+  place-items: center;
+}
+.column3 {
+  float: left;
+  width: 32%;
+  /* background-color: pink; */
+  /* padding: 15px; */
+  /* margin-right: 2%; */
+  display: grid;
+  place-items: center;
+}
 /* Clear floats after the columns */
-.rowf:after {
+.row:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .columnf {
-    width: 100%;
-  }
-}
-
 /* social media icons */
 .fa {
-  padding: 10px;
+  /* padding: 10px; */
   font-size: 25px;
-  width: 25px;
+  width: 86px;
   height: 25px;
   text-align: center;
   text-decoration: none;
@@ -156,30 +206,111 @@ body {
   border-radius: 50%;
 }
 
+.socialicons{
+  /* background-color: green; */
+}
+
 .fa:hover {
   opacity: 0.7;
 }
 .fa-instagram {
-  background: rgb(173, 25, 165);
-  color: white;
+  /* background:  rgb(173, 25, 165); */
+  color: var(--golden);
 }
 
 .fa-facebook {
-  background: #3b5998;
-  color: white;
+  /* background: #3B5998; */
+  color: var(--golden);
 }
 
 .fa-telegram {
-  background: #3888a8;
-  color: white;
+  /* background: #3888a8; */
+  color: var(--golden);
 }
 
 .fa-twitter {
-  background: #55acee;
-  color: white;
+  /* background: #55ACEE; */
+  color: var(--golden);
 }
 
 .fa-whatsapp {
-  background: #12be29;
-  color: white;
+  /* background: #12be29; */
+  color: var(--golden);
+}
+
+/* responsiveness */
+@media only screen and (max-width: 600px) {
+
+   .subtop {
+    float: left;
+    width: 40%;
+    list-style-type: none;
+    margin-top: 2%;
+    transform: rotate(180deg);
+  }
+  .subtop li {
+    float: right;
+    display: inline;
+    margin-top: 3%;
+    margin-right: 22%;
+    margin-left: 0%;
+  }
+  .subtop li a {
+    display: block;
+    color: white;
+    padding: 8px 16px;
+    text-decoration: none;
+    
+  }
+  .topnav ul > li {
+    transform: rotate(-180deg);
+  }
+  .logo {
+    margin-left: 2%;
+  }
+  .backimage {
+    /* height: 400px; */
+    height: 450px;
+  }
+  
+  .about .head p{
+    font-size: 20px;
+  }
+  .para{
+    width: 95%;
+  }
+  .para p{
+    font-size: 100%;
+  }
+
+  /*
+  .footer {
+    margin-top: 2%;
+    padding-left: 1%;
+    width: 338px;
+    height: 600px;
+  } */
+
+  .row{
+    display: grid;
+    place-items: center;
+    align-content: center;
+    }
+
+  .column1 {
+    width: 90%;
+  }
+  .column2 {
+    width: 90%;
+  }
+  .column3 {
+    width: 90%;
+  }
+  .fa {
+    /* padding: 10px; */
+    font-size: 25px;
+    width: 50px;
+   
+  }
+
 }
