--- a/view/homepage/homestyle.css
+++ b/view/homepage/homestyle.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');
+
+
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
+    font-family: 'Poppins', sans-serif ;
   background-color: rgb(0, 0, 0);
 }
 * {
@@ -69,7 +73,7 @@ body {
 }
 
 .backimage {
-  height: 700px;
+  height: 750px;
   background-image: url(../../src/images/pic5.jpg);
   margin-top: 0%;
   position: relative;
@@ -97,11 +101,39 @@ body {
     background-image: url(../../src/images/pic8.jpg);
   }
 }
+
+ .hidden{
+  opacity: 0;
+  transition: all 1s;
+  filter: blur(5px);
+  transform: translateX(-100%);
+} 
+/* .anime{
+  opacity: 0; 
+  transition: all 2s;
+  filter: blur(5px);
+  transform: translateX(100%);
+}
+.anime:nth-child(2){
+  transition-delay: 200ms;
+}
+.anime:nth-child(3){
+  transition-delay: 400ms;
+} */
+.show{
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+}
 /* service gallery starts here  */
 .services {
   display: grid;
   place-items: center;
+  align-content: center;
+  
 }
+
+
 
 .head {
   /* background-color: yellow; */
@@ -118,17 +150,17 @@ body {
 }
 
 .servicesgallery {
-  padding-left: 5%;
+  /* padding-left: 5%; */
   width: 97%;
   
 }
 .servicesgallery span {
   color: var(--golden);
 }
-
 .servicesgallery .servigallery1 {
   margin: 5px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc;*/
+  border: none;
   border-radius: 4px;
   float: left;
   /* width: 412px; */
@@ -136,7 +168,6 @@ body {
   margin-right: 4%;
   margin-top: 2%;
   transition: transform 0.2s;
-  align-items: center;
 }
 .servicesgallery .servigallery1 p {
   font-size: 150%;
@@ -145,7 +176,8 @@ body {
 }
 .servicesgallery .servigallery2 {
   margin: 5px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
+  border: none;
   float: left;
   width: 28.33%;
   margin-right: 4%;
@@ -160,7 +192,8 @@ body {
 }
 .servicesgallery .servigallery3 {
   margin: 5px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
+  border: none;
   float: left;
   width: 28.33%;
   margin-right: 0%;
@@ -174,7 +207,8 @@ body {
   color: white;
 }
 .servicesgallery .servigallery1:hover {
-  border: 1px solid #777;
+  /* border: 1px solid #777;*/
+  border: none;
   -ms-transform: scale(1.05); /* IE 9 */
   -webkit-transform: scale(1.05); /* Safari 3-8 */
   transform: scale(1.05);
@@ -182,9 +216,11 @@ body {
 .servicesgallery .servigallery1 img {
   width: 100%;
   height: auto;
+  border-radius: 2%;
 }
 .servicesgallery .servigallery2:hover {
-  border: 1px solid #777;
+  /* border: 1px solid #777; */
+  border: none;
   -ms-transform: scale(1.05); /* IE 9 */
   -webkit-transform: scale(1.05); /* Safari 3-8 */
   transform: scale(1.05);
@@ -192,9 +228,11 @@ body {
 .servicesgallery .servigallery2 img {
   width: 100%;
   height: auto;
+  border-radius: 2%;
 }
 .servicesgallery .servigallery3:hover {
-  border: 1px solid #777;
+  /* border: 1px solid #777; */
+  border: none;
   -ms-transform: scale(1.05); /* IE 9 */
   -webkit-transform: scale(1.05); /* Safari 3-8 */
   transform: scale(1.05);
@@ -202,6 +240,7 @@ body {
 .servicesgallery .servigallery3 img {
   width: 100%;
   height: auto;
+  border-radius: 2%;
 }
 .servicesgallery .desc {
   padding: 15px;
@@ -217,12 +256,12 @@ body {
 }
 /* special offers gallery starts here  */
 .offers {
-  
   display: grid;
   place-items: center;
+  align-content: center;
 }
 .offersgallery {
-  padding-left: 5%;
+  /* padding-left: 5%; */
   width: 97%;
  
 }
@@ -253,7 +292,8 @@ body {
 }
 .offersgallery .offgallery1 {
   margin: 5px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
+  border: none;
   border-radius: 4px;
   float: left;
   width: 28.33%;
@@ -268,7 +308,8 @@ body {
 }
 .offersgallery .offgallery2 {
   margin: 5px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
+  border: none;
   float: left;
   width: 28.33%;
   margin-right: 4%;
@@ -283,7 +324,8 @@ body {
 }
 .offersgallery .offgallery3 {
   margin: 5px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
+  border: none;
   float: left;
   width: 28.33%;
   margin-right: 0%;
@@ -297,7 +339,8 @@ body {
   color: white;
 }
 .offersgallery .offgallery1:hover {
-  border: 1px solid #777;
+  /* border: 1px solid #777; */
+  border: none;
   -ms-transform: scale(1.05); /* IE 9 */
   -webkit-transform: scale(1.05); /* Safari 3-8 */
   transform: scale(1.05);
@@ -305,9 +348,11 @@ body {
 .offersgallery .offgallery1 img {
   width: 100%;
   height: auto;
+  border-radius: 2%;
 }
 .offersgallery .offgallery2:hover {
-  border: 1px solid #777;
+  /* border: 1px solid #777; */
+  border: none;
   -ms-transform: scale(1.05); /* IE 9 */
   -webkit-transform: scale(1.05); /* Safari 3-8 */
   transform: scale(1.05);
@@ -315,9 +360,11 @@ body {
 .offersgallery .offgallery2 img {
   width: 100%;
   height: auto;
+  border-radius: 2%;
 }
 .offersgallery .offgallery3:hover {
-  border: 1px solid #777;
+  /* border: 1px solid #777; */
+  border: none;
   -ms-transform: scale(1.05); /* IE 9 */
   -webkit-transform: scale(1.05); /* Safari 3-8 */
   transform: scale(1.05);
@@ -325,6 +372,7 @@ body {
 .offersgallery .offgallery3 img {
   width: 100%;
   height: auto;
+  border-radius: 2%;
 }
 .offersgallery .desc {
   padding: 15px;
@@ -338,27 +386,56 @@ body {
 .footer {
   background-color: #252323;
   padding: 15px;
-  text-align: center;
+  /* text-align: center; */
   height: 300%;
-  color: aliceblue;
+  color: white;
   margin-top: 2%;
-  padding-left: 15%;
+  /* padding-left: 15%; */
+  display: grid;
+  place-items: center;
 }
 
-.row .column h3 {
+.row  h3 {
   color: var(--golden);
+  text-align: center;
 }
-.row .column p {
+.row  p {
   font-size: 120%;
 }
-/* Create three equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 29%;
-  padding: 15px;
-  margin-right: 2%;
+.row{
+  /* background-color: purple; */
+  width: 98%;
 }
 
+/* Create three equal columns that floats next to each other */
+ .column1 {
+  float: left;
+  width: 32%;
+  /* background-color: red; */
+  /* padding: 15px; */
+  /* margin-right: 2%; */
+  display: grid;
+  place-items: center;
+  
+}
+.column2 {
+  float: left;
+  width: 32%;
+  /* background-color: yellow; */
+  /* padding: 15px; */
+  /* margin-right: 2%; */
+  display: grid;
+  place-items: center;
+}
+.column3 {
+  float: left;
+  width: 32%;
+  /* background-color: pink; */
+  /* padding: 15px; */
+  /* margin-right: 2%; */
+  display: grid;
+  place-items: center;
+}
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -370,12 +447,16 @@ body {
 .fa {
   /* padding: 10px; */
   font-size: 25px;
-  width: 25px;
+  width: 86px;
   height: 25px;
   text-align: center;
   text-decoration: none;
-  /* margin: 4px 1px; */
+  margin: 4px 1px;
   border-radius: 50%;
+}
+
+.socialicons{
+  /* background-color: green; */
 }
 
 .fa:hover {
@@ -410,6 +491,9 @@ body {
 
 
 @media only screen and (max-width: 600px) {
+  .hidden{
+    transition: none;
+  }
    .subtop {
     float: left;
     width: 40%;
@@ -447,18 +531,10 @@ body {
   animation: change 30s infinite ease-in-out;
   background-size: 100% 100%;
   }
-  /*
   
+  /* .footer {
   
-  
-  
-
-  .footer {
-    margin-top: 2%;
-    padding-left: 1%;
-    width: 338px;
-    height: 600px;
-  } */
+  }  */
 
   .servicesgallery {
     display: grid;
@@ -467,42 +543,103 @@ body {
   }
   
   .servicesgallery .servigallery1{
-    width: 70.33%;
+    width: 85.33%;
     margin-right:0%;
     padding: 0%;
+    border: none;
+  }
+  .servicesgallery .servigallery1:hover {
+    /* border: 1px solid #777; */
+    border: none;
+    -ms-transform: scale(1); /* IE 9 */
+    -webkit-transform: scale(1); /* Safari 3-8 */
+    transform: scale(1);
   }
   .servicesgallery .servigallery2{
-    width: 70.33%;
+    width: 85.33%;
     margin-right:0%;
     padding: 0%;
   }
+  .servicesgallery .servigallery2:hover {
+    /* border: 1px solid #777; */
+    border: none;
+    -ms-transform: scale(1); /* IE 9 */
+    -webkit-transform: scale(1); /* Safari 3-8 */
+    transform: scale(1);
+  }
   .servicesgallery .servigallery3{
-    width: 70.33%;
+    width: 85.33%;
     margin-right:0%;
     padding: 0%;
+  }
+  .servicesgallery .servigallery3:hover {
+    border: none;
+    /* border: 1px solid #777; */
+    -ms-transform: scale(1); /* IE 9 */
+    -webkit-transform: scale(1); /* Safari 3-8 */
+    transform: scale(1);
   }
   .offersgallery{
     display: grid;
     place-items: center;
   }
   .offersgallery .offgallery1{
-    width: 70.33%;
+    width: 85.33%;
     margin-right:0%;
     padding: 0%;
+  }
+  .offersgallery .offgallery1:hover {
+    /* border: 1px solid #777; */
+    border: none;
+    -ms-transform: scale(1); /* IE 9 */
+    -webkit-transform: scale(1); /* Safari 3-8 */
+    transform: scale(1);
   }
   .offersgallery .offgallery2{
-    width: 70.33%;
+    width: 85.33%;
     margin-right:0%;
     padding: 0%;
+  }
+  .offersgallery .offgallery2:hover {
+    /* border: 1px solid #777; */
+    border: none;
+    -ms-transform: scale(1); /* IE 9 */
+    -webkit-transform: scale(1); /* Safari 3-8 */
+    transform: scale(1);
   }
   .offersgallery .offgallery3{
-    width: 70.33%;
+    width: 85.33%;
     margin-right:0%;
     padding: 0%;
   }
-  .column {
+  .offersgallery .offgallery3:hover {
+    /* border: 1px solid #777; */
+    border: none;
+    -ms-transform: scale(1); /* IE 9 */
+    -webkit-transform: scale(1); /* Safari 3-8 */
+    transform: scale(1);
+  }
+  .row{
+  display: grid;
+  place-items: center;
+  align-content: center;
+  }
+  .column1 {
     width: 90%;
   }
+  .column2 {
+    width: 90%;
+  }
+  .column3 {
+    width: 90%;
+  }
+  .fa {
+    /* padding: 10px; */
+    font-size: 25px;
+    width: 50px;
+   
+  }
+
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 /* @media only screen and (min-width: 600px) {
