--- a/view/servicepage/service.html
+++ b/view/servicepage/service.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="service.js"></script>
+    <script defer src="service.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="service.css">
     <title>zuxmoney</title>
@@ -14,25 +14,32 @@
 <body>
     <div class="backimage">
         <div class="topnav">
-            <ul>
-                <li class="logo" style="float: left; margin-top: 2%;" ><img src="../../src/images/logo5.png" alt="Logo" width="270px" ></li>
-                <li><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
-                <li><a href="../servicepage/service.html">SERVICES</a></li>
-                <li><a href="../contacts/contacts.html">CONTACTS</a></li>
-                <li><a href="../about/about.html">ABOUT</a></li>
-                <li><a href="../homepage/home.html">HOME</a></li>
-            </ul>
+            <div class="logo">
+                <img src="../../src/images/logo5.png" alt="Logo" width="270px" >
+            </div>
+            <div class="subtop">
+                <ul>
+                    <li><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
+                    <li><a href="../servicepage/service.html">SERVICES</a></li>
+                    <li><a href="../contacts/contacts.html">CONTACTS</a></li>
+                    <li><a href="../about/about.html">ABOUT</a></li>
+                    <li><a href="../homepage/home.html">HOME</a></li>
+                </ul>
+            </div>
+            
         </div>
     </div>
-    <div class="services">
-        <div class="head">
-            <p>
-                <span>Hair</span> Dressing
-            </p>
-        </div>
-        <div class="servicesextra">
+    <div class="hidden">
+        <div class="services">
+            <div class="head">
+                <p>
+                    <span>Hair </span>Dressing 
+                </p>
+            </div>
+
             <div class="servicesgallery">
-                <div class="servigallery1">
+
+                <div class="servigallery1 ">
                     <a target="_blank" href="../../src/images/pic4.jpg">
                         <img src="../../src/images/pic4.jpg" alt="Cinque Terre" width="600" height="400">
                     </a>
@@ -41,7 +48,10 @@
                         description of the image here</div>
                 </div>
 
-                <div class="servigallery2">
+
+
+
+                <div class="servigallery2 ">
                     <a target="_blank" href="../../src/images/pic2.jpg">
                         <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
                     </a>
@@ -50,7 +60,9 @@
                         description of the image here</div>
                 </div>
 
-                <div class="servigallery3">
+
+
+                <div class="servigallery3 ">
                     <a target="_blank" href="../../src/images/pic3.jpg">
                         <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
                     </a>
@@ -58,16 +70,19 @@
                     <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
                         description of the image here</div>
                 </div>
+
+
             </div>
+
         </div>
     </div>
-    <div class="offers">
-        <div class="head">
-            <p>
-                <span>MAKE</span>UP
-            </p>
-        </div>
-        <div class="specialoffers">
+    <div class="hidden">
+        <div class="offers">
+            <div class="head">
+                <p>
+                    <span>Make</span>up
+                </p>
+            </div>
             <div class="offersgallery">
                 <div class="offgallery1">
                     <a target="_blank" href="../../src/images/pic4.jpg">
@@ -94,15 +109,16 @@
                         description of the image here</div>
                 </div>
             </div>
+
         </div>
     </div>
-    <div class="nail">
-        <div class="head">
-            <p>
-                <span>NailsDressing</span> custo
-            </p>
-        </div>
-        <div class="nailoffer">
+    <div class="hidden">
+        <div class="nails">
+            <div class="head">
+                <p>
+                    <span>Nails</span>Decoration
+                </p>
+            </div>
             <div class="nailgallery">
                 <div class="nailgallery1">
                     <a target="_blank" href="../../src/images/pic4.jpg">
@@ -129,36 +145,40 @@
                         description of the image here</div>
                 </div>
             </div>
+
         </div>
     </div>
     <div class="footer">
-
-        <a href="#" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-facebook"></a>
-        
-        <a href="#" class="fa fa-telegram"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-whatsapp"></a>
-          
-          <div class="row">
-            <div class="column">
-              <h2>Hours</h2>
-              <p >Monday-Friday:&nbsp; &nbsp;&nbsp;&nbsp;  8:00am-10:00pm<br>
-              Saturday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 9:00am-7:00pm<br>
-             Sunday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 12:00am-7:00pm</p>
-            </div>
-            
-            <div class="column">
-              <h2>Location</h2>
-              <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
-            </div>
-            
-            <div class="column">
-              <h2>Contacts</h2>
-              <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp;  +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com<p>
-            </div>
-          </div>
+        <div class="socialicons">
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-telegram"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-whatsapp"></a>
         </div>
+
+
+
+        <div class="row">
+            <div class="column1">
+                <h3>Hours</h3>
+                <p>Mon-Fri:&nbsp; &nbsp;&nbsp;&nbsp; 8:00am-10:00pm<br>
+                    Sat:&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 9:00am-7:00pm<br>
+                    Sun:&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 12:00am-7:00pm</p>
+            </div>
+
+            <div class="column2">
+                <h3>Location</h3>
+                <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
+            </div>
+
+            <div class="column3">
+                <h3>Contacts</h3>
+                <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
+                <p>
+            </div>
+        </div>
+    </div>
         
 </body>
 
